# UQAC-S4

./: .gitignore  .gitmodules  README.md
Calcul Avancé/: Programme Examen 2
Cybersécurité/: Programme Examen 1  Programme Examen 2
Cybersécurité/TP1/: Gabarit de réponse.docx
Info Mobile/: NitFlex.rar  Programme Examen 1
Info Mobile/Examples/Internationalisation/: settings.gradle.kts
Info Mobile/Examples/menu/: settings.gradle.kts
Info Mobile/Examples/style/: settings.gradle.kts
Info Mobile/HelloDroide/: settings.gradle.kts
Info Mobile/HelloDroide/app/: build.gradle.kts
Info Mobile/Mafag/: settings.gradle.kts
Info Mobile/NitFlex/: settings.gradle.kts
Info Mobile/Personnage/: settings.gradle.kts
Intro DB/: Programme Examen 1
Intro DB/Cours 7/: Création des tables.sql  insertion-de-données.sql  quelques-requetes.sql
Intro DB/TD1/: Question3.txt
Intro DB/TP2/: DD-modèle.xlsx  TP2.sql
Intro DB/TP3/: 1 - Tables.sql  2 - Données.sql  3 - Requêtes.sql  données.sql  requetes.sql
POO/: 17.01.2024.docx  Programme Examen 1 - POO
POO/Chapitre 3/: CMakeLists.txt  chapitre3.cpp  chapitre3.h
POO/Chapitre 8/: CMakeLists.txt  Tableau.h  main.cpp
POO/TD1/: CMakeLists.txt  compteur.h  main.cpp
POO/TD3/Exercice 3/: CMakeLists.txt  CompteBancaire.cpp  CompteBancaire.h  CompteCourant.cpp  CompteCourant.h  CompteEpargne.cpp  CompteEpargne.h  main.cpp
POO/TD7/: main.cpp
POO/TP1/: CMakeLists.txt  franceisbetter.h  main.cpp
POO/TP2/: CMakeLists.txt  Date.h  DateH.h  Heure.h  main.cpp
POO/TP3/: CMakeLists.txt  Coord.h  Point.h  main.cpp
(+209 files in other folders)
